--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,9 +36,15 @@ jobs:
       # Authenticate to GCP
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v0'
+        uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.SERVICE_ACCOUNT }}'
+    
+      - name: Authenticate to repository
+        run: |
+          gcloud auth configure-docker  us-central1-docker.pkg.dev
+
+        
 
 
       - name: Push  Image
