--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,9 @@
 # This is a basic workflow to help you get started with Actions
+env: 
+  repo: https://github.com/farrukh90/artemis.git
+  app_version: 2.0.0
+  app_name: artemis
+  region: ${{ env.region }}
 
 name: Build
 
@@ -18,19 +23,19 @@ jobs:
 
       - name: Clone a repo 
         run: |
-          git clone https://github.com/farrukh90/artemis.git
+          git clone ${{env.repo}}
 
 
       - name: Change version
-        working-directory: artemis
+        working-directory: ${{ env.app_name }}
         run: |
-          git checkout 2.0.0
+          git checkout ${{ env.app_version }}
 
 
       - name: Build Image
-        working-directory: artemis
+        working-directory: ${{ env.app_name }}
         run: |
-          docker image build -t  us-central1-docker.pkg.dev/terraform-project-aug/artemis/artemis:2.0.0   . 
+          docker image build -t  ${{ env.region }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ env.app_name }}/${{ env.app_name }} ${{ env.app_version }}   . 
 
 
       # Authenticate to GCP
@@ -42,7 +47,7 @@ jobs:
     
       - name: Authenticate to repository
         run: |
-          gcloud auth configure-docker  us-central1-docker.pkg.dev
+          gcloud auth configure-docker  ${{ env.region }}-docker.pkg.dev
 
         
 
@@ -50,7 +55,7 @@ jobs:
       - name: Push  Image
         working-directory: artemmis
         run: |
-         docker image push  us-central1-docker.pkg.dev/terraform-project-aug/artemis/artemis:2.0.0 
+         docker image push  ${{ env.region }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ env.app_name }}/${{ env.app_name }} ${{ env.app_version }} 
 
 
 
